[package]
name = "triton-rs"
version = "0.1.1"
edition = "2021"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
description = "Rust bindings to the Triton Inference Server"
license = "MIT"
repository = "https://github.com/xtuc/triton-rs"

[dependencies]
libc = "0.2.168"
triton-sys = { version = "0.1.0", path = "../triton-sys" }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
