[package]
name = "triton-sys"
version = "0.1.1"
edition = "2021"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
description = "Internal Rust bindings to the Triton Inference Server. See triton-rs for high level API."
license = "MIT"
repository = "https://github.com/xtuc/triton-rs"

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
